1012王禹然更新

--- a/MIST143_Traveler/Views/TransportationPage/TransportationHomePage.cshtml
+++ b/MIST143_Traveler/Views/TransportationPage/TransportationHomePage.cshtml
@@ -3,5 +3,384 @@
     ViewData["Title"] = "TransportationHomePage";
 }
 
-<h1>宇然的交通頁面</h1>
+<h1>帥然的交通頁面</h1>
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device" -width, initial-scale="1.0" />
+    <meta http-equiv="X-UA-Compatibal" comtent="ie=edge">
+    <title>鐵路</title>
+    <link href="https://fonts.googleapis.com/css2?family=Inter+Tight&family=Noto+Sans+TC:wght@100;500&display=swap"
+          rel="stylesheet" />
+    <link rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="./travelIndex.css">
+    <link href="~/css/017.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" />
+    <link rel="stylesheet" href="//apps.bdimg.com/libs/jqueryui/1.10.4/css/jquery-ui.min.css">
+    <script src="//apps.bdimg.com/libs/jquery/1.10.2/jquery.min.js"></script>
+    <script src="//apps.bdimg.com/libs/jqueryui/1.10.4/jquery-ui.min.js"></script>
+    <link rel="stylesheet" href="jqueryui/style.css">
+    <style type="text/css">
+    </style>
+</head>
+
+<body>
+   
+    <!-- <div class="header">
+           <a href="#" class="logo"><img src="
+               https://picsum.photos/80/40?random=1" alt="網站名稱"></a>
+           <nav>
+               <a href="#">關於我們</a>
+               <a href="#">最新消息</a>
+               <a href="#">產品</a>
+               <a href="#">服務</a>
+               <a href="#">聯絡我們</a>
+               <a href="#">網站地圖</a>
+           </nav>
+       </div>
+    -->
+
+    <div class="banner">
+        <img src="~/images/macImg/658e718b-d83c-41a5-a1cc-a28daf93ff9a.jpg">
+
+    </div>
+
+
+    <div class="research">
+        <div class="wrap">
+            <div class="a">
+                <input type="radio" name="鐵路">
+                <label>台灣高鐵國旅聯票</label>
+                <input type="radio" name="鐵路">
+                <label>JR Pass 鐵路通票</label>
+                <input type="radio" name="鐵路">
+                <label>歐洲鐵路</label>
+                <input type="radio" name="鐵路">
+                <label>歐鐵火車通行證</label>
+                <input type="radio" name="鐵路">
+                <label>機場交通</label>
+            </div>
+            <select>
+                <option>單程</option>
+                <option>往返</option>
+            </select>
+            <div class="bc">
+                <div class="b">
+                    <div>
+
+                    </div>
+                    <div>
+                        <select>
+                            <!-- onclick="clickTapei"台北轉運站 -->
+                            <option>南港站</option>
+                            <option>台北站</option>
+                            <option>台中站</option>
+                            <option>台南站</option>
+                            <option>嘉義站</option>
+                            <option>左營站</option>
+                            <option>彰化站</option>
+                            <option>新竹站</option>
+                            <option>板橋站</option>
+                            <option>桃園站</option>
+                            <option>苗栗站</option>
+                            <option>雲林站</option>
+                            </ul>
+                        </select>
+                    </div>
+
+                </div>
+                <div class="d">
+                    <img src="~/images/macImg/1372789.png" width="20px" height="20px">
+                    <div>
+                        <p>目的地</p>
+                        <div>
+                            <select>
+                                <!-- onclick="clickTapei"台北轉運站 -->
+                                <option>南港站</option>
+                                <option>台北站</option>
+                                <option>台中站</option>
+                                <option>台南站</option>
+                                <option>嘉義站</option>
+                                <option>左營站</option>
+                                <option>彰化站</option>
+                                <option>新竹站</option>
+                                <option>板橋站</option>
+                                <option>桃園站</option>
+                                <option>苗栗站</option>
+                                <option>雲林站</option>
+                                </ul>
+                            </select>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="c">
+                <div>
+                    <p>出發日期</p>
+                    <p>日期：<input type="text" id="datepicker"></p>
+                </div>
+                <div>
+                    <div class="e">
+                        <p>回程日期</p>
+                        <p>日期：<input type="text" id="datepicker"></p>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+        <div class="f">
+            <button type="button" class="btn btn-warning">搜尋</button>
+        </div>
+    </div>
+    </div>
+    </div>
+    </div>
+    <!-- <div class="research">
+        <table style="width: 100%; border:solid">
+            <tr>
+                <th><a href="https://www.google.com/webhp">1</a></th>
+                <th>2</th>
+                <th>3</th>
+                <th>4</th>
+            </tr>
+
+        </table>
+        <div class="a" style="border:solid">a
+            <div class="b" style="border:solid">b
+                <div class="c" style="border:solid">c</div>
+            </div>
+        </div>
+
+    </div> -->
+    <!-- <ul class="path">
+        <li><a href="#">首頁</a></li>
+        <li><a href="#">最新消息</a></li>
+        <li><a href="#">首頁</a></li>
+    </ul> -->
+
+    <div class="advertisment">
+        <div class="wrap">
+            <div class="item">
+                <img src="~/images/macImg/3176371.png">
+            </div>
+            <div class="item">
+                <span style="font-weight:bold" ;>高鐵8折起 多樣組合任你搭</span>
+                </br>
+                </br>
+                <p>計程車 / 全台景點 / 在地體驗 最高省1252元</p>
+            </div>
+
+            <div class="item">
+                <img src="~/images/macImg/3258465.png">
+            </div>
+            <div class="item">
+                <span style="font-weight:bold" ;>立即升級大禮包會員 享13倍優惠</span>
+                </br>
+                </br>
+                <p>高鐵新戶 KTHSR50 折50 再送美食飲品優惠</p>
+            </div>
+            <div class="item">
+                <img src="~/images/macImg/3258469.png">
+            </div>
+            <div class="item">
+                <span style="font-weight:bold" ;>線上取票免排隊直入閘</span>
+                </br>
+                </br>
+                <p>高鐵 T-EX App 取票 防疫安心搭</p>
+            </div>
+            <div class="item">
+                <img src="~/images/macImg/3258504.png">
+            </div>
+            <div class="item">
+                <span style="font-weight:bold" ;>高鐵會員 TGo 點數雙重送</span>
+                </br>
+                </br>
+                <p>TGo / Klook 點數一起累積 再抽免費搭</p>
+            </div>
+        </div>
+    </div>
+    </br>
+    </br>
+    </br>
+    <hr size="2px" width="960px">
+
+
+
+
+    <div class="likeIt">
+        <h2>你也會喜歡</h2>
+        <div class="wrap">
+            <div class="item">
+                <img src="~/images/macImg/P02-211019-001.jpg" />
+                <div class="txt">
+                    <h2>鐵道文化資產</h2>
+                    <p>
+                        平溪支線鐵道，原是「臺陽礦業株式會社」為了運煤而興建的，後來政府接收經營後，一度歷經廢棄的命運，後來發展為具重要觀光價值的鐵道支線。沿線每個小站都帶有著濃濃古意尤其冬日陰雨綿綿之際，乘坐於小火車內，拭開滿是白霧的窗向外探，似乎能探得當年礦工們於破曉前外出打拼的辛勤之感。
+                        菁桐站有別具特色的礦工風味套餐，大碗公的魯肉飯和油豆腐等在地美食，簡單卻帶著濃濃古早味喔！還有平溪的芋圓、雞捲、烤溪蝦等都是當地的特色小吃。
+                    </p>
+                </div>
+            </div>
+            <div class="item">
+                <img src="~/images/macImg/photo-1527295110-5145f6b148d0.jpg" />
+                <div class="txt">
+                    <h2>沙崙線</h2>
+                    <p>
+                        臺鐵為了方便旅客轉乘高鐵，於民國 100 年 1 月 2 日正式啟用， 臺鐵沙崙線列車取代原本搭高鐵接駁巴士，交通時間由原本 50 分鐘縮短至 22 分鐘。沙崙線全程皆為高架
+                        ，還開了首例橫跨國道一號，為臺鐵捷運化轉型實例。特別的是路線還經過長榮大學內，還能搭到別具 臺南特色的彩繪圖案列車，讓你的接駁時刻更有樂趣！
+                    </p>
+                </div>
+            </div>
+            <div class="item">
+                <img src="~/images/macImg/photo-1553663832-9d638d94b08e.jpg" />
+                <div class="txt">
+                    <h2>集集支線</h2>
+                    <p>
+                        為臺鐵最長的鐵路支線，最初興建原因為水力發電興建水庫的運輸鐵路，後來因豐富的觀光資源，成為臺灣觀光鐵道的先驅，它也是目前南投縣唯一仍在營運的鐵路。
+                        車埕車站的「埕」字是臺灣閩南語「場」的意思。昔日埔里糖廠於 1916 年始以臺車運送糖到車埕車站，將生產的糖運出，在車埕車站前有許多臺車停放，站名也因此而來。
+                        集集鐵道文物館原本為臺鐵舊倉庫，因推動集集鎮的鐵道文化觀光資源所成立。文物館為一座木造仿古建築，館內地板設計為仿鐵道造型，展示著鐵道文化的相關文物、921 大地震時的照片及集集鎮縮小模型等。
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+    <div class="about">
+
+        <h2>如何購買</h2>
+        <p>
+            選擇台灣高鐵時刻表班次
+            全時段高鐵班次8折起 即刻劃位！
+        </p>
+        <div class="wrap">
+            <div class="item pic">
+                <img src="~/images/macImg/4.jpg" height="200px" width="200px">
+                <h3>阿里山小火車</h3>
+                <p>
+                    台灣阿里山一日遊或多日遊行程，漫步林間，沿途享受芬多精的洗禮,下山的小火車路線為奮起湖車站至嘉義火車站，和上山全路段的火車相比，不會有額外的交通車接駁費用支出，價格上較上山阿里山火車路線便宜，提供給想要簡單體驗阿里山小火車的遊客！
+                </p>
+            </div>
+            <div class="item text">
+                <img src="~/images/macImg/20180319231557_36-1024x683.jpg" height="200px" width="200px">
+                <h3>自強號</h3>
+                <p>強烈推介使用五天特級票券，普悠瑪停站少較快，自強號比莒光號班次多。乘搭火車，輕鬆舒適地將台灣的美景一覽無遺。你會看到丘陵環抱盆地，綿延山脈，蔚藍大海也能看到有設計感現代建築，具有民國氣息的小巷。</p>
+            </div>
+            <div class="item">
+                <img src="~/images/macImg/img-58ad2b69bf8af.jpg" height="200px" width="200px">
+                <h3>淡海輕軌</h3>
+                <p>
+                    淡海輕軌車輛「行武者號」專門為淡水地區氣候和地理環境量身打造，水藍色波浪紋塗裝，每列車可容納265人。第一期路網全長9.55公里，設14個車站，預定107年底完工，是北台灣第一個輕軌系統，也是台灣首例執行「國車國造」的重要計畫，培養軌道專業人才，扶植國內軌道工業，讓國輕軌系統朝向單純化、最佳化、本土化目標前進。
+                </p>
+            </div>
+        </div>
+    </div>
+
+    <a href="03.html"></a>
+
+    <div class="products">
+        <div class="wrap">
+            <div class="item">
+                <img src="~/images/macImg/heighway.jpg" height="300px" width="200px">
+            </div>
+            <div class="item">
+                <h3>台灣高鐵國旅聯票線上訂票，訂高鐵票Klook一指搞定！</h3>
+                <p>
+                    什麼是台灣高鐵國旅聯票？台灣高鐵國旅聯票是台灣高鐵公司與Klook攜手合作推出的高鐵優惠交通聯票，超划算的台灣高鐵優惠價格，搭配熱門的台灣高鐵聯票加購項目。台灣高鐵國旅聯票秉持著讓用戶體驗一鍵方便預訂的原則，透過Klook預訂台灣高鐵國旅聯票，同時預訂高鐵優惠車票及Klook推出的經典熱門台灣高鐵聯票加購項目，省去在高鐵站買票的時間，也不需要在遊樂場所、高鐵站附近租車行排隊人擠人，一機在手，透過Klook查看台灣高鐵時刻表，以及可搭配的高鐵聯票熱門加購項目，預訂台灣高鐵國旅聯票讓你不錯過台灣之美！
+
+                    搭乘台灣高鐵玩遍台灣既輕鬆又簡單！
+                </p>
+
+                <div class="flip1">
+                    <span class="1">Read more</span>
+                </div>
+                <div class="panel1">
+                    Klook
+                    線上訂購台灣高鐵國旅聯票，提前為你保留台灣高鐵預訂座位，省去在高鐵車站排隊買高鐵車票的煩惱。我們與台灣高鐵公司攜手合作推出台灣高鐵國旅聯票，提供熱門台灣高鐵路線訂票服務，免去在高鐵買票的時間，且免台灣高鐵車票預訂手續費、當日預訂即買即用台灣高鐵國旅聯票，出發前可免費取消。超優惠的台灣高鐵國旅聯票搭配台灣高鐵加購項目：租車優惠、機車租借、樂園門票等及多項台灣高鐵特色加購活動，買到賺到，是今年絕對不能錯過的高鐵超神交通聯票。
+
+                    完成台灣高鐵乘車體驗後，你還可以同時賺取台灣高鐵會員 TGo 點數及 Klook
+                    積分，雙重回饋一鍵享受！不用費心於四處比較台灣高鐵票價，或一早起床搶台灣高鐵早鳥票，省去在高鐵車站買票排隊的時間，我們提供超優惠的台灣高鐵預訂價格，台灣高鐵車票8折起優惠，搭配精選台灣高鐵加購項目，一機在手，台灣高鐵訂票優惠跟著有。還在等什麼？快點打開台灣高鐵時刻表，透過
+                    Klook 訂台灣高鐵國旅聯票，享受安全舒適的台灣高鐵優質體驗！
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="service">
+        <h2>常見問題</h2>
+        <p>以下內容說明如何排解您在使用PlanetTravel時遇到的問題。</p>
+        <div class="wrap">
+            <div class="item">
+                <div class="question">
+                    <div class="topic">
+                        <img src="~/images/macImg/5726678.png">
+                        <span style="font-weight:bold" ;>如何領取高鐵車票？</span>
+                    </div>
+
+                    <p>
+                        台灣高鐵合作之便利商店（7-11、全家、萊爾富、OK超商）取票，每張車票需支付TWD 10手續費，取票規則請參考 **提醒您，若現場取實體高鐵票，如需變更／退票，需至原取票窗口辦理，Klook
+                        不受理線上變更／退票（請務必索取「退票證明」以便申請加購項目退款）
+                    </p>
+                </div>
+
+                <div class="item">
+                    <div class="topic">
+                        <img src="~/images/macImg/5726678.png">
+                        <span style="font-weight:bold" ;>如何領取高鐵車票？</span>
+                    </div>
+                    <p>
+                        高鐵車票：高鐵乘車時間日期恕無法線上更改，如需更改，請取消訂單並重新預訂。若您已在高鐵車站，請於指定乘車日期發車前30分鐘內諮詢站務人員
+
+                        加購項目：加購項目使用日期無法線上更改，如需更改，請取消訂單並重新預訂（建議查看憑證確認加購項目效期）
+                    </p>
+                </div>
+
+            </div>
+            <div class="question">
+                <div class="item">
+                    <div class="topic">
+                        <img src="~/images/macImg/5726678.png">
+                        <span style="font-weight:bold" ;>如何領取高鐵車票？</span>
+                    </div>
+                    <p>
+                        高鐵車票取票前： * 退票需於搭車前30分鐘，於 Klook 平台「我的訂單」> 選擇高鐵聯票訂單 > 點選「取消預訂」即可取消高鐵票並申請退款，或至高鐵各車站窗口辦理 *
+                        如需取消加購項目，請先行取消高鐵票，並透過線上客服與我們聯繫（前往訂單頁面 > 選擇訂單 > 點擊「線上客服」圖示）。
+                    </p>
+                </div>
+
+                <div class="item">
+                    <div class="topic">
+                        <img src="~/images/macImg/5726678.png">
+                        <span style="font-weight:bold" ;>如何領取高鐵車票？</span>
+                    </div>
+                    <p>
+                        每張高鐵票可以訂購多個加購項目，單程票每張成人票需搭配至少一個高鐵加購項目，來回票則每組成人票須搭配一個高鐵加購項目 *
+                        加購項目活動方案詳情、使用方法及條例細則，請於付款頁面加購服務列表點擊「查看詳情」查看內容 * 加購項目需於指定日期內使用完畢
+                    </p>
+                </div>
+
+            </div>
+
+        </div>
+    </div>
+    
+    <!-- 結束 -->
+    <!-- //收折頁 -->
+    <!-- JQUERY -->
+    <script src="https://code.jquery.com/jquery-3.6.1.min.js"
+            integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
+    <script>
+
+        // JavaScript
+        $(function () {
+            $(".flip1").click(function () {
+                $(".panel1").slideToggle("slow");
+            });
+        });
+    </script>
+    <script src="./017.js"></script>
+    <!-- //收折頁尾 -->
+</body>
+
+</html>
