--- a/MIST143_Traveler/Views/ProductListPage/ProductListHomePage.cshtml
+++ b/MIST143_Traveler/Views/ProductListPage/ProductListHomePage.cshtml
@@ -57,10 +57,10 @@
                             <label class="input-box" width="622" height="54">
                                 <img src="../Images/ProductListPageImages/search.jpg" />
                                 <input type="text" placeholder="想去哪裡玩?" size="80" style="border-style:none" class="js-experience-search-input js-all-search-input-active" />
-                                <button type="button" onclick="location.href='@Url.Action("ProductListHomePage", "ProductListPage")'" class="search klk-button klk-button-primary">
+                                <button type="button" onclick="location.href='@Url.Content("~/ProductListPage2/ProductListPage")'" class="search klk-button klk-button-primary">
                                     <span>
                                         搜尋
-                                    </span>
+                                    </span>                                 
                                 </button>
                             </label>
                             <div class="search-suggest-container"></div>
