--- a/MIST143_Traveler/Views/Shared/_Layout.cshtml
+++ b/MIST143_Traveler/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿@addTagHelper *,MIST143_Traveler
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
@@ -9,7 +10,7 @@
     <link rel="stylesheet"
           href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" />
     <link rel="stylesheet"
-          href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" /> 
+          href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" />
     @await RenderSectionAsync("Styles", required: false)
 </head>
 <body>
@@ -22,7 +23,7 @@
 
             <form class="header-search">
                 <div class="header-search-box">
-                    <button type="button" onclick="location.href='@Url.Action("ProductListHomePage", "ProductListPage")'"> 
+                    <button type="button" onclick="location.href='@Url.Action("ProductListHomePage", "ProductListPage")'">
                         <span class="bi-search"></span>
                     </button>
                     <input type="search"
@@ -95,11 +96,12 @@
         </div>
     </nav>
     <div class="container">
+
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
     </div>
-
+    <vc:product></vc:product>
     <!-- 複製footer的範圍 -->
     <div class="border-bottom-line"></div>
     <footer class="main-footer">
