--- a/MIST143_Traveler/Views/ProductListPage/ProductListHomePage.cshtml
+++ b/MIST143_Traveler/Views/ProductListPage/ProductListHomePage.cshtml
@@ -16,9 +16,10 @@
             $('#overlay').hide();
         }
 
-    </script> 
+        
+    </script>
     <article>
-
+        
         <div class="article-test">
             <div style=" background: url('../Images/ProductListPageImages/category.jpg'); background-size: cover; height: 350px; ">
                 <div class="rwd-experience-header-main-container">
@@ -57,10 +58,10 @@
                             <label class="input-box" width="622" height="54">
                                 <img src="../Images/ProductListPageImages/search.jpg" />
                                 <input type="text" placeholder="想去哪裡玩?" size="80" style="border-style:none" class="js-experience-search-input js-all-search-input-active" />
-                                <button type="button" onclick="location.href='@Url.Action("ProductListHomePage", "ProductListPage")'" class="search klk-button klk-button-primary">
+                                <button type="button" onclick="location.href='@Url.Content("~/ProductListPage2/ProductListPage")'" class="search klk-button klk-button-primary">
                                     <span>
                                         搜尋
-                                    </span>
+                                    </span>                                 
                                 </button>
                             </label>
                             <div class="search-suggest-container"></div>
@@ -593,57 +594,62 @@
                     </div>
 
 
+
                     <div class="destination-guide-button desktop">
+
                         <div class="destination-tips destination-guide-button_main">
                             <div class="overlay" id="overlay">
                                 <div class="popup">
                                     <div onclick="CloseModal()" class="CloseIcon">&#10006;</div>
                                     <input placeholder="想去哪自己找" type="text" class="destination-search-input">
 
-                                    <div class="row">
-                                        <div class="col-4">
-                                            <div class="list-group" id="list-tab" role="tablist">
-                                                <a class="list-group-item list-group-item-action active" id="list-home-list" data-bs-toggle="list" href="#list-home" role="tab" aria-controls="list-home">
-                                                    <b class="search-box-recommend_area">東亞</b>
-                                                    <div class="search-box-recommend_cities">
-                                                        <span>香港</span>
-                                                        <span>台北</span>
-                                                    </div>
-                                                </a>
-                                                <a class="list-group-item list-group-item-action" id="list-profile-list" data-bs-toggle="list" href="#list-profile" role="tab" aria-controls="list-profile">
-                                                    <b class="search-box-recommend_area">東南亞</b>
-                                                    <div class="search-box-recommend_cities">
-                                                        <span>新加坡</span>
-                                                    </div>
-                                                </a>
-                                                <a class="list-group-item list-group-item-action" id="list-messages-list" data-bs-toggle="list" href="#list-messages" role="tab" aria-controls="list-messages">
-                                                    <b class="search-box-recommend_area">南亞/中東</b>
-                                                    <div class="search-box-recommend_cities">
-                                                        <span>加德滿都</span>
-                                                        <span>杜拜</span>
-                                                    </div>
-                                                </a>
-                                                <a class="list-group-item list-group-item-action" id="list-settings-list" data-bs-toggle="list" href="#list-settings" role="tab" aria-controls="list-settings">
-                                                    <b class="search-box-recommend_area">大洋洲</b>
-                                                    <div class="search-box-recommend_cities">
-                                                        <span>雪梨</span>
-                                                        <span>墨爾本</span>
-                                                    </div>
-                                                </a>
-                                                <a class="list-group-item list-group-item-action" id="list-settings-list" data-bs-toggle="list" href="#list-settings" role="tab" aria-controls="list-settings">
-                                                    <b class="search-box-recommend_area">歐洲</b>
-                                                    <div class="search-box-recommend_cities">
-                                                        <span>倫敦</span>
-                                                        <span>巴黎</span>
-                                                    </div>
-                                                </a>
-                                                <a class="list-group-item list-group-item-action" id="list-settings-list" data-bs-toggle="list" href="#list-settings" role="tab" aria-controls="list-settings">
-                                                    <b class="search-box-recommend_area">北美洲</b>
-                                                    <div class="search-box-recommend_cities">
-                                                        <span>紐約</span>
-                                                        <span>洛杉磯</span>
-                                                    </div>
-                                                </a>
+                                    <div class="search-box-recommend search-box-recommend">
+                                        <div class="ChangeDestination.Destination">
+                                            <div class="search-box-recommend_left">
+                                                <ul class="search-box-recommend_groups">
+                                                    <li class="myMOUSE">
+                                                        <b class="search-box-recommend_area">東亞</b>
+                                                        <div class="search-box-recommend_cities">
+                                                            <span>香港</span>
+                                                            <span>台北</span>
+                                                        </div>
+                                                    </li>
+                                                    <li class="myMOUSE">
+                                                        <b class="search-box-recommend_area">東南亞</b>
+                                                        <div class="search-box-recommend_cities">
+                                                            <span>新加坡</span>
+                                                        </div>
+                                                    </li>
+                                                    <li class="myMOUSE">
+                                                        <b class="search-box-recommend_area">南亞/中東</b>
+                                                        <div class="search-box-recommend_cities">
+                                                            <span>加德滿都</span>
+                                                            <span>杜拜</span>
+                                                        </div>
+                                                    </li>
+                                                    <li class="myMOUSE">
+                                                        <b class="search-box-recommend_area">大洋洲</b>
+                                                        <div class="search-box-recommend_cities">
+                                                            <span>雪梨</span>
+                                                            <span>墨爾本</span>
+                                                        </div>
+                                                    </li>
+                                                    <li class="myMOUSE">
+                                                        <b class="search-box-recommend_area">歐洲</b>
+                                                        <div class="search-box-recommend_cities">
+                                                            <span>倫敦</span>
+                                                            <span>巴黎</span>
+                                                        </div>
+                                                    </li>
+                                                    <li class="myMOUSE">
+                                                        <b class="search-box-recommend_area">北美洲</b>
+                                                        <div class="search-box-recommend_cities">
+                                                            <span>紐約</span>
+                                                            <span>洛杉磯</span>
+                                                        </div>
+                                                    </li>
+                                                </ul>
+
                                             </div>
                                         </div>
                                         <div class="col-8">
@@ -658,14 +664,6 @@
                                         </div>
                                     </div>
                                     
-
-
-
-
-
-
-
-
                                 </div>
                             </div>
                         </div>
