--- a/MIST143_Traveler/Views/ProductListPage/ProductListHomePage.cshtml
+++ b/MIST143_Traveler/Views/ProductListPage/ProductListHomePage.cshtml
@@ -53,17 +53,14 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="header-search-box-desktop rwd-header-search-box-desktop">
-                            <label class="input-box" width="622" height="54">
-                                <img src="../Images/ProductListPageImages/search.jpg" />
-                                <input type="text" placeholder="想去哪裡玩?" size="80" style="border-style:none" class="js-experience-search-input js-all-search-input-active" />
-                                <button type="button" onclick="location.href='@Url.Content("~/ProductListPage2/ProductListPage")'" class="search klk-button klk-button-primary">
-                                    <span>
-                                        搜尋
-                                    </span>                                 
-                                </button>
-                            </label>
-                            <div class="search-suggest-container"></div>
+                        <div class="banner-search-box ban-sea-box">
+                            <span class="bi-search"></span>
+                            <input type="search"
+                                   name=""
+                                   id=""
+                                   placeholder="探索全球目的地/活動" />
+                            <button type="button" onclick="location.href='@Url.Action("ProductListPage", "ProductListPage2")'">搜尋</button>
+
                         </div>
                     </div>
 
