--- a/MIST143_Traveler/Views/Home/ContactCenter.cshtml
+++ b/MIST143_Traveler/Views/Home/ContactCenter.cshtml
@@ -85,19 +85,30 @@
 
                 <section class="search_area">
                     <div class="search_area_contant">
-                        <strong class="text-warning text-uppercase textmm mx-auto">搜尋常見問題</strong>
+                        <strong class="text-warning text-uppercase textmm mx-auto">聯絡我們</strong>
 
                         <div class="search_area_contant_bar">
                             <input class="form-control"
                                    type="text"
-                                   placeholder="輸入搜尋關鍵字"
+                                   placeholder="您的信箱帳號"
                                    aria-label="default input example" />
-                            <button type="button" class="btn btn-warning">送出</button>
+
+                            @*傳送訊息框*@
+                            <div class="form-floating p-5">
+                                <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2" style="height: 100px"></textarea>
+                                <label for="floatingTextarea2"></label>
+                                <div class="offset-8"> <button type="button" class="btn btn-warning">送出</button></div>
+                            </div>
+
                         </div>
+
+
+
                         <h1 class="display-6 mb-4">
                             If You Have Any Query, Please Contact Us
                         </h1>
                     </div>
+                    
                 </section>
             </div>
         </div>
