--- a/MIST143_Traveler/Views/CustomerCenter/LoginModal.cshtml
+++ b/MIST143_Traveler/Views/CustomerCenter/LoginModal.cshtml
@@ -8,9 +8,8 @@
 
 
 
-@*@using (Html.BeginForm())
-    {*@
-<form name="userInfo" method="post" enctype="application/x-www-form-urlencoded" action="~/CustomerCenter/LogApi">
+
+
     <h1>歡迎</h1>
     <div class="mb-3">
         <label for="exampleFormControlInput1" class="form-label">使用者帳號</label>
@@ -39,13 +38,14 @@
         <a href="@Url.Content("~/CustomerCenter/Forgetpas")" class="btn-outline-dark">忘記密碼?</a>
 
     </div>
-    </form>
+   
     @*}*@
     @section Scripts {
         <script>
             //const login = document.querySelector("#btnlogin");
             //login.addEventListener("")
-
+           
+            
 
         </script>
     }
@@ -53,22 +53,33 @@
 <script>
         const DemoValue = () => {
          let act = document.querySelector("#Actemail");
-        let pas = document.querySelector("#Pas");
+            let pas = document.querySelector("#Pas");
+            Swal.fire(
+                'Good job!',
+                'You clicked the button!',
+                'success'
+            )
         act.value = "d555@gmail.com";
         pas.value = "a1234567";
 
     }
+    const smtxt = document.querySelector("#sm")
+    const formData = new FormData(document.userInfo);
+    const xhr = new XMLHttpRequest()
+    xhr.addEventListener("click", () => {
 
-        //const xhr = new XMLHttpRequest()
-        //    xhr.addEventListener("click", () => {
-        //            const nnam = xhr.responseText
-        //            smtxt.textContent = nnam
-        //        })
-        //    xhr.open("POST",document.userInfo.action) //"/api/register"
-        //    xhr.send(formData)
-        //    })
+        const nnam = xhr.responseText
+
+        xhr.open("POST", document.userInfo.action) //"/api/register"
+        xhr.send(formData)
+        alert(nnam)
+    })
+   
+   
+
+        
 </script>
 
-
+<script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     @*@{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
         }*@
