--- a/MIST143_Traveler/Views/CustomerCenter/LoginModal.cshtml
+++ b/MIST143_Traveler/Views/CustomerCenter/LoginModal.cshtml
@@ -2,26 +2,29 @@
 @{
     ViewData["Title"] = "LoginModal";
     Layout = null;
-    
+
 
 }
 
 
 
-@using (Html.BeginForm())
-{
+
 
     <h1>歡迎</h1>
     <div class="mb-3">
         <label for="exampleFormControlInput1" class="form-label">使用者帳號</label>
-       @* <input type="text" class="form-control" id="Actemail" placeholder="name@example.com">*@
+
+        @* <input type="text" class="form-control" id="Actemail" placeholder="name@example.com">*@
+
         @Html.TextBox("Email", "", new { @class = "form-control", id = "Actemail", placeholder = "name@example.com" })
         <small id="sm" class="form-text text-muted"></small>
     </div>
     <div class="mb-3">
         <label for="exampleFormControlInput1" class="form-label">使用者密碼</label>
-       @* <input type="password" class="form-control" id="Pas" placeholder="password">*@
-        @Html.TextBox("Password", "", new { @class = "form-control",id="Pas", placeholder = "password",type= "password" })
+
+        @* <input type="password" class="form-control" id="Pas" placeholder="password">*@
+        @Html.TextBox("Password", "", new { @class = "form-control", id = "Pas", placeholder = "password", type = "password" })
+
     </div>
     <div class="modal-footer mx-auto">
         <div style="margin-right:150px;">
@@ -34,35 +37,57 @@
                 </label>
             </span>
         </div>
-        <button type="submit" class="btn btn-primary" id="btnlogin" onclick="BtnLogin()">登入</button>
+        <button type="submit" class="btn btn-primary" id="btnlogin">登入</button>
         <button type="button" class="btn btn-success" id=" demo" onclick="DemoValue()">Demo</button>
         <a href="@Url.Content("~/CustomerCenter/Forgetpas")" class="btn-outline-dark">忘記密碼?</a>
 
     </div>
-}
-@section Scripts {
-    <script>
-        //const login = document.querySelector("#btnlogin");
-        //login.addEventListener("")
+
+   
+    @*}*@
+    @section Scripts {
+        <script>
+            //const login = document.querySelector("#btnlogin");
+            //login.addEventListener("")
+           
+            
 
 
-    </script>
-}
+        </script>
+    }
 
 <script>
         const DemoValue = () => {
          let act = document.querySelector("#Actemail");
-        let pas = document.querySelector("#Pas");
+
+            let pas = document.querySelector("#Pas");
+            Swal.fire(
+                'Good job!',
+                'You clicked the button!',
+                'success'
+            )
         act.value = "d555@gmail.com";
         pas.value = "a1234567";
-        
-    }
 
-    const BtnLogin = () => {
-            alert("登入成功")
-        }
-</script>
+
+    }
+    const smtxt = document.querySelector("#sm")
+    const formData = new FormData(document.userInfo);
+    const xhr = new XMLHttpRequest()
+    xhr.addEventListener("click", () => {
+
+        const nnam = xhr.responseText
+
+        xhr.open("POST", document.userInfo.action) //"/api/register"
+        xhr.send(formData)
+        alert(nnam)
+    })
+   
    
 
-@*@{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-    }*@
+        
+</script>
+
+<script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    @*@{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+        }*@
