--- a/MIST143_Traveler/Views/ProductListPage2/ProductListPage.cshtml
+++ b/MIST143_Traveler/Views/ProductListPage2/ProductListPage.cshtml
@@ -13,6 +13,7 @@
         function tmenu(number) {
             var menu = document.getElementById("menu-" + number);
         }
+
     </script>
     <article>
         <div style="background: url('../Images/ProductListPageImages/category.jpg');background-size: cover;height: 216px;top: 50%;">
@@ -56,20 +57,61 @@
                             <div class="js-range-tree-spm">
                                 <div class="klk-tree klk-tree-checkable klk-tree-multiple">
                                     <div class="klk-tree-node">
-                                        <div class="klk-tree-node-inner">
-                                            <div class="form-check" onclick="tmenu(1)";>
+                                        @*<div class="klk-tree-node-inner">
+                                    <div class="form-check" onclick="tmenu(1)" ;>
+                                        <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
+                                        <label id="menu-1" class="form-check-label" for="flexRadioDefault1">
+                                            東亞
+                                        </label>
+                                    </div>
+                                </div>*@
+                                        @*<div class="klk-tree-node-inner">
+                                    <div class="form-check" onclick="tmenu(2)" ;>
+                                        <label id="menu-2" class="form-check-label" for="flexRadioDefault2">
+                                            東南亞
+                                        </label>
+                                    </div>
+                                </div>*@
+                                        <div class="accordion-item acchei">
+                                            <label class="accordion-header" id="flush-headingOne">
                                                 <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
-                                                <label id="menu-1" class="form-check-label" for="flexRadioDefault1">
+                                                <button class="accordion-button collapsed btnright"
+                                                        type="button"
+                                                        data-bs-toggle="collapse"
+                                                        data-bs-target="#flush-collapseOne"
+                                                        aria-expanded="false"
+                                                        aria-controls="flush-collapseOne">
                                                     東亞
-                                                </label>
+                                                </button>
+                                            </label>
+                                            <div id="flush-collapseFour"
+                                                 class="accordion-collapse collapse"
+                                                 aria-labelledby="flush-headingFour"
+                                                 data-bs-parent="#accordionFlushExample">
+                                                <div class="accordion-body">
+                                                    <p>韓國</p>
+                                                </div>
                                             </div>
                                         </div>
-                                        <div class="klk-tree-node-inner">
-                                            <div class="form-check" onclick="tmenu(2)";>
-                                                <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2" >
-                                                <label id="menu-2" class="form-check-label" for="flexRadioDefault2">
+                                        <div class="accordion-item acchei">
+                                            <label class="accordion-header" id="flush-headingTwo">
+                                                <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2">
+                                                <button class="accordion-button collapsed btnright"
+                                                        type="button"
+                                                        data-bs-toggle="collapse"
+                                                        data-bs-target="#flush-collapseFour"
+                                                        aria-expanded="false"
+                                                        aria-controls="flush-collapseFour">
                                                     東南亞
-                                                </label>
+                                                </button>
+                                            </label>
+                                            <div id="flush-collapseFour"
+                                                 class="accordion-collapse collapse"
+                                                 aria-labelledby="flush-headingFour"
+                                                 data-bs-parent="#accordionFlushExample">
+                                                <div class="accordion-body">
+                                                    <p>新加坡</p>
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
@@ -78,9 +120,11 @@
                         </div>
                     </div>
                 </div>
+                <div class="search-result-activity-container">
+                    
+                    @await Component.InvokeAsync("Productlistpagi")
+                </div>
             </div>
-
-
-
+        </div>
     </article>
 </body>
